src/objects/Doc2File_Request__c.object
<CustomObject>
    <description>Represents metadata, permissions, and cross-references for converting Document Folders to Content Libraries. Records are created and updated by Apex batch jobs.</description>
    <fields>
        <fullName>Folder_Developer_Name__c</fullName>
        <description>Developer Name of the original Document Folder. By storing this data, we avoid extra code and SOQL queries in the batch jobs.</description>
        <inlineHelpText>Developer Name of the original Document Folder.</inlineHelpText>
        <label>Folder Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Document Folder ID to convert to Content Library.</description>
        <externalId>true</externalId>
        <inlineHelpText>Document Folder ID to convert to Content Library.</inlineHelpText>
        <label>Folder ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <description>Name of the original Document Folder. By storing this data, we avoid extra code and SOQL queries in the batch jobs.</description>
        <inlineHelpText>Name of the original Document Folder.</inlineHelpText>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_IDs__c</fullName>
        <description>Comma-delimited list of Group IDs derived from the DocumentFolder sharedTo entries from Metadata API. https://developer.salesforce.com/docs/atlas.en-us.api_meta.meta/api_meta/meta_folder.htm</description>
        <inlineHelpText>Comma-delimited list of Group IDs derived from the DocumentFolder sharedTo entries from Metadata API.</inlineHelpText>
        <label>Group IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Library_ID__c</fullName>
        <description>The new Content Library created to replace the Document Folder. Populated by batch apex jobs.</description>
        <inlineHelpText>The new Content Library created to replace the Document Folder.</inlineHelpText>
        <label>Library ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Permission_ID__c</fullName>
        <description>The content library permission to grant to members of the new library. In Setup menu in Classic UI, find &quot;Content Permissions&quot;. Learn more about content library management at https://help.salesforce.com/articleView?id=collab_files_library_folders.htm</description>
        <inlineHelpText>The content library permission to grant to members of the new library.</inlineHelpText>
        <label>Library Permission ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Public_Group_ID__c</fullName>
        <description>Content Libraries can be shared to users and public groups, but Document Folders can be shared to users, public groups, and roles. To bridge the gap, then a public group per library is created and the library shared with the new group. All members that the Document Folder was shared with are added as members of the new library public group. Populated by batch apex job.</description>
        <inlineHelpText>Public Group that represents who the original Document Folder was shared to. This defines the new Library&apos;s membership.</inlineHelpText>
        <label>Library Public Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Doc2File Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Folder_Name__c</columns>
        <columns>Folder_ID__c</columns>
        <columns>Library_ID__c</columns>
        <columns>Library_Public_Group_ID__c</columns>
        <columns>Library_Permission_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc2File Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>